# ShigureBot

./: .env.prod  .gitignore  README.md  bot.py  pyproject.toml
.github/workflows/: black.yml
shigure/: .gitignore  blackbe.json  hitokoto.json  jikipedia.json  join_leave_tip.json  keyword_replies.json  poke_replies.json  req_foward.json  sexpic.json  website_capture.json
src/plugins/shigure_bot/: __init__.py
src/plugins/shigure_bot/plugins/_cache/: __main__.py  util.py
src/plugins/shigure_bot/plugins/_config/: README.md  __init__.py  __main__.py  config.py
src/plugins/shigure_bot/plugins/_pic_search/: __main__.py  data_source.py
src/plugins/shigure_bot/plugins/_req_to_group/: __main__.py
src/plugins/shigure_bot/plugins/api_tester/: README.md  __init__.py  __main__.py
src/plugins/shigure_bot/plugins/blackbe/: __init__.py  __main__.py  config.py  datatypes.py  detect.py  get_data.py  get_msg.py  utils.py
src/plugins/shigure_bot/plugins/config/: __init__.py  config.py
src/plugins/shigure_bot/plugins/gaokao_tip/: __main__.py
src/plugins/shigure_bot/plugins/hitokoto/: __init__.py  __main__.py  config.py
src/plugins/shigure_bot/plugins/jikipedia/: __init__.py  __main__.py  config.py  data_source.py
src/plugins/shigure_bot/plugins/join_leave_tip/: __init__.py  __main__.py  config.py
src/plugins/shigure_bot/plugins/keyword_reply/: __init__.py  __main__.py  config.py  get_reply.py
src/plugins/shigure_bot/plugins/mc_svr_stat/: __init__.py  __main__.py  get_stat.py
src/plugins/shigure_bot/plugins/netease_music/: __main__.py  config.py  data_source.py
(+35 files in other folders)
