[tool.poetry]
name = "ShigureBot"
version = "0.3.4"
description = "Kawaii no Shigure Bot~"
authors = ["student_2333 <lgc2333@126.com>"]
license = "LGPL-2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
nonebot2 = "^2.0.0b2"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"
mcstatus = "^9.0.3"
pydantic = "^1.9.0"
nonebot-plugin-htmlrender = "^0.0.4.5"
nonebot-plugin-apscheduler = "^0.1.2"
nonebot-adapter-onebot = "^2.0.0-beta.1"
jieba = "^0.42.1"
nonebot-plugin-guild-patch = "^0.1.3"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.6"
pylint = "^2.13.8"


[tool.nonebot]
plugins = ["nonebot_plugin_guild_patch"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"